# ai-code-review-openenv

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  tasks.py
openenv_ai_code_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: pre_submit.py  pre_validate.py
server/: __init__.py  app.py
temp_push_fix_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
temp_push_fix_env/server/: Dockerfile  __init__.py  app.py  temp_push_fix_env_environment.py
